--- a/package.json
+++ b/package.json
@@ -3,16 +3,33 @@
   "version": "1.0.0",
   "description": "App simple Express + MongoDB",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+"scripts": {
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "test": "jest --runInBand --detectOpenHandles"
+}
+,
+"jest": {
+  "testEnvironment": "node",
+  "verbose": true
+}
+,
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.2.1",
+    "nodemon": "^2.0.22",
+    "supertest": "^7.1.4"
   }
+  
 }
